:art: chore: Google Place ID 저장 로직 변경